--- a/css/mapa.css
+++ b/css/mapa.css
@@ -12,7 +12,7 @@ body {
 
 .circle {
   margin: 0 auto;
-  background-color: #1268d0;
+  background-color: #4197fa;
   border-radius: 50%;
   text-align: center;
   height: 100vh;
