--- a/css/grade.css
+++ b/css/grade.css
@@ -1,5 +1,5 @@
 body {
-  background-color: #347fdc;
+  background: linear-gradient(100deg, #347fdc, #5aa9f7);
   color: #000;
   font-family: Arial, Helvetica, sans-serif;
   margin: 0;
