--- a/css/promocoes.css
+++ b/css/promocoes.css
@@ -1,60 +1,61 @@
 * {
-    margin: 0;
-    padding: 0;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  }
+  margin: 0;
+  padding: 0;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+}
 
-  body {
-    background: linear-gradient(100deg, #347fdc, #5aa9f7);
-    color: #fff;
-    place-self: center;
-  }
+body {
+  background: linear-gradient(100deg, #347fdc, #5aa9f7);
+  color: #fff;
+  place-self: center;
+}
 
-  h1 {
-    font-size: 72px;
-    text-align: center;
-    padding: 100px 0px;
-  }
+h1 {
+  font-size: 72px;
+  text-align: center;
+  padding: 100px 0px;
+}
 
-  .produto {
-    background-color: #3d5ac2;
-    width: 1200px;
-    height: 500px;
-    place-content: center center;
-    border-radius: 4px;
-    padding: 0px 40px;
-  }
+.produto {
+  background-color: #3d5ac2;
+  width: 1200px;
+  height: 500px;
+  place-content: center center;
+  border-radius: 4px;
+  padding: 0px 40px;
+}
 
-  .grid {
-    display: grid;
-    place-self: center left;
-    grid-template-columns: auto 1fr;
-    gap: 60px;
-  }
+.grid {
+  display: grid;
+  place-self: center left;
+  grid-template-columns: auto 1fr;
+  gap: 60px;
+}
 
-  #img-Promo {
-    width: 400px;
-    height: 400px;
-    border-radius: 4px;
-  }
+#img-Promo {
+  width: 400px;
+  height: 400px;
+  border-radius: 4px;
+}
 
-  .info {
-    grid-column: 2;
-  }
+.info {
+  grid-column: 2;
+}
 
-  .info p {
-    margin-bottom: 20px;
-  }
+.info p {
+  margin-bottom: 20px;
+}
 
-  .nome-produto {
-    font-size: 48px;
-    margin: 0px;
-  }
+.nome-produto {
+  font-size: 48px;
+  margin: 0px;
+}
 
-  .preco-com-desconto, .porcentagem {
-    font-size: 30px;
-  }
+.preco-com-desconto,
+.porcentagem {
+  font-size: 30px;
+}
 
-  .preco_sem_desconto {
-    text-decoration: line-through;
-  }
+.preco_sem_desconto {
+  text-decoration: line-through;
+}
