--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,7 @@
 }
 
 body {
-  overflow: hidden; 
+  overflow: hidden;
   font-family: sans-serif;
   color: white;
   font-family: sans-serif;
@@ -36,7 +36,7 @@ body {
 
 .header {
   margin-top: 300px;
-  height: 200px; 
+  height: 200px;
 }
 
 h1 {
@@ -60,7 +60,7 @@ h1 {
 }
 
 .menu {
-  display: flex;  
+  display: flex;
   justify-content: center;
   gap: 30px;
   flex-wrap: wrap;
@@ -78,12 +78,12 @@ h1 {
   align-items: center;
   justify-content: center;
   gap: 10px;
-  box-shadow: 0 4px 6px rgba(0,0,0,0.1);
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 }
 
 .item:hover {
-    transition: 0.2s;
-    background-color: rgb(223, 223, 223);
+  transition: 0.2s;
+  background-color: rgb(223, 223, 223);
 }
 
 .item .icon {
@@ -93,6 +93,21 @@ h1 {
 
 .item span {
   font-weight: bold;
+}
+
+/* Responsividade */
+
+@media (max-width: 600px) {
+  #dvd-logo {
+    width: 150px;
+    height: 150px;
+  }
+}
+@media (max-width: 450px) {
+  #dvd-logo {
+    width: 100px;
+    height: 100px;
+  }
 }
 
 /* @keyframes fadeIn {
