--- a/css/grade.css
+++ b/css/grade.css
@@ -3,6 +3,19 @@ body {
   color: #000;
   font-family: Arial, Helvetica, sans-serif;
   margin: 0;
+  animation: fadeIn 1s ease-in-out;
+}
+
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+    transform: translateY(-20px);
+  }
+
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
 }
 
 .grid {
@@ -30,6 +43,11 @@ body {
   margin: 10px auto;
   margin-bottom: 50px;
   display: block;
+  transition: transform 0.3s ease;
+}
+
+.img-produto:hover {
+  transform: scale(1.1);
 }
 
 .nome-produto {
