--- a/css/mapa.css
+++ b/css/mapa.css
@@ -8,6 +8,19 @@
 body {
   background: linear-gradient(100deg, #347fdc, #5aa9f7);
   color: #ffffff;
+  animation: fadeIn 1s ease-in-out;
+}
+
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+    transform: translateY(-20px);
+  }
+
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
 }
 
 /* Título */
@@ -37,7 +50,7 @@ h1 {
   max-width: 100%;
 }
 
-/* Responsividade para telas menores */
+/* Responsividade */
 @media (max-width: 768px) {
   h1 {
     font-size: 40px;
