--- a/css/produto.css
+++ b/css/produto.css
@@ -10,6 +10,19 @@ body {
   background: linear-gradient(100deg, #347fdc, #5aa9f7);
   color: #000000;
   margin: 0;
+  animation: fadeIn 1s ease-in-out;
+}
+
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+    transform: translateY(-20px);
+  }
+
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
 }
 
 /* Estilo geral da tabela */
