--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,19 @@ body {
   justify-content: center;
   align-items: center;
   background: linear-gradient(100deg, #347fdc, #5aa9f7);
+  animation: fadeIn 1s ease-in-out;
+}
+
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+    transform: translateY(-20px);
+  }
+
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
 }
 
 .container {
