--- a/css/carrinho.css
+++ b/css/carrinho.css
@@ -6,7 +6,7 @@
 
 body {
   background-color: #377dda;
-  font-family: Arial, sans-serif;
+  font-family: "Open Sans", sans-serif;
   display: flex;
   justify-content: center;
   padding: 40px 20px;
