--- a/css/produto.css
+++ b/css/produto.css
@@ -2,8 +2,8 @@
 
 * {
   margin: 0;
-  padding: 0;
-  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  padding: 0;  
+  font-family: "Open Sans", sans-serif;
 }
 
 body {
