--- a/css/style.css
+++ b/css/style.css
@@ -118,8 +118,9 @@ h1 {
 }
 @media (max-width: 450px) {
   #dvd-logo {
-    width: 100px;
-    height: 100px;
+    visibility: hidden;
+   /* width: 100px;
+    height: 100px;*/
   }
 }
 
