--- a/css/style.css
+++ b/css/style.css
@@ -118,10 +118,14 @@ h1 {
 }
 @media (max-width: 450px) {
   #dvd-logo {
-    visibility: hidden;
-   /* width: 100px;
-    height: 100px;*/
+   
+    width: 100px;
+    height: 100px;
   }
+  .header {
+  margin-top: 150px;
+  height: 200px;
+}
 }
 
 /* @keyframes fadeIn {
