--- a/css/cadastro.css
+++ b/css/cadastro.css
@@ -173,6 +173,9 @@ button:hover {
 
 @media (max-width: 480px) {
 
+  body{
+      min-height: 80vh;
+  }
   #resultado {
     position: absolute;
     margin-top: 40rem;
