--- a/css/cadastro.css
+++ b/css/cadastro.css
@@ -7,7 +7,7 @@
 }
 
 body {
-  background: linear-gradient(100deg, #347fdc, #5aa9f7);
+  background: #347fdc;
   color: #ffffff;
   display: flex;
   justify-content: center;
